[package]
name = "bevy_lyon"
version = "0.1.0"
authors = ["Matrixmage <osmithsi@sfu.ca>"]
edition = "2018"
license = "MIT"
description = "A simple library to provide access to lyon-powered meshes in bevy!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
lyon = "0.16.0"
smart-default = "0.6.0"